<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">


        <EditText
            android:id="@+id/edittext_first"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:autofillHints=""
            android:background="#E38C8C"
            android:hint="@string/enter_1st_num"
            android:inputType="numberDecimal"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="normal"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/edittext_second"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:autofillHints=""
            android:background="#E39795"
            android:ems="10"
            android:hint="@string/enter_2nd_num"
            android:inputType="numberDecimal"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="normal"
            tools:ignore="LabelFor" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#302323"
                android:onClick="clear_onclick"
                android:text="@string/c"
                android:textColor="#FFFFFF"
                android:textSize="80sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_addition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#331D1D"
                android:onClick="addition_onclick"
                android:text="@string/add"
                android:textColor="#FFFFFF"
                android:textSize="80sp"
                tools:ignore="ButtonStyle" />




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_subtraction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#302323"
                android:onClick="subtraction_onclick"
                android:text="@string/minus"
                android:textColor="#FFFFFF"
                android:textSize="80sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#331D1D"
                android:onClick="power_onclick"
                android:text="@string/power"
                android:textColor="#FFFFFF"
                android:textSize="80sp"
                tools:ignore="ButtonStyle" />




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_multiplication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#302323"
                android:onClick="multiplication_onclick"
                android:text="@string/multiply"
                android:textColor="#FFFFFF"
                android:textSize="80sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_division"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#331D1D"
                android:onClick="division_onclick"
                android:text="@string/division"
                android:textColor="#FFFFFF"
                android:textSize="80sp"
                tools:ignore="ButtonStyle,OnClick" />



        </LinearLayout>


    </LinearLayout>


</LinearLayout>